syntax = "proto3";

package order;

option go_package = "online-store-microservice/proto/order;orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
  rpc GetOrdersByUserId(GetOrdersByUserIdRequest) returns (GetOrdersByUserIdResponse);
}

message OrderData {
  string id = 1;
  string user_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double total_price = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateOrderRequest {
  string user_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double total_price = 4;
}

message CreateOrderResponse {
  OrderData order = 1;
}

message GetOrderByIdRequest {
  string id = 1;
}

message GetOrderByIdResponse {
  OrderData order = 1;
}

message GetOrdersByUserIdRequest {
  string user_id = 1;
}

message GetOrdersByUserIdResponse {
  repeated OrderData orders = 1;
}
